fix(input): fix dev a11y, post-icon spacing

--- a/src/components/input/styles/CdrInput.scss
+++ b/src/components/input/styles/CdrInput.scss
@@ -49,6 +49,7 @@
   }
 
   &:last-child {
+    margin-right: -$cdr-space-half-x;
     border-top-right-radius: $cdr-radius-softer;
     border-bottom-right-radius: $cdr-radius-softer;
   }
@@ -143,6 +144,10 @@
 
   &__post-icon {
     display: block;
+    position: absolute;
+    top: 50%;
+    right: $cdr-space-half-x;
+    transform: translateY(-50%);
   }
 
   &__required-label {
